<resources>
    <string name="app_name">Poor2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="text_click_to_connect">Click to connect to robot.</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_cancel">Cancel</string>

    <string name="status_discovering">Discovering robots…</string>
    <string name="status_connecting">Connecting…</string>

    <string name="drawer_status_connected">CONNECTED TO %s</string>
    <string name="drawer_status_disconnected">DISCONNECTED</string>

    <string name="nav_control">Control</string>
    <string name="nav_sensors">Sensors</string>
    <string name="nav_manage">Settings</string>
    <string name="nav_disconnect">Disconnect</string>

    <string name="sensor_ultrasound_left">Ultrasound left</string>
    <string name="sensor_ultrasound_center">Ultrasound center</string>
    <string name="sensor_ultrasound_right">Ultrasound right</string>
    <string name="sensor_compass">Compass</string>
    <string name="sensor_accelerationX">Acceleration (X)</string>
    <string name="sensor_accelerationY">Acceleration (Y)</string>
    <string name="sensor_accelerationZ">Acceleration (Z)</string>
    <string name="sensor_tiltX">Tilt (X)</string>
    <string name="sensor_tiltY">Tilt (Y)</string>
    <string name="sensor_tiltZ">Tilt (Z)</string>
    <string name="sensor_humidity">Humidity</string>
    <string name="sensor_temperature">Temperature (°C)</string>
    <string name="sensor_powerIn">Power In (V)</string>
    <string name="sensor_optical_left">Optical left</string>
    <string name="sensor_optical_center_left">Optical center/left</string>
    <string name="sensor_optical_center_right">Optical center/right</string>
    <string name="sensor_optical_right">Optical right</string>
    <string name="sensor_photoresistor_left">Photoresistor left</string>
    <string name="sensor_photoresistor_center">Photoresistor center</string>
    <string name="sensor_photoresistor_right">Photoresistor right</string>

    <string name="btn_turtle_mode">Turtle mode</string>
    <string name="btn_turtle_mode_off">Turtle mode OFF</string>
    <string name="btn_turtle_mode_on">Turtle mode ON</string>

    <string name="toolbar_hide_warning">Swipe down to show toolbar.</string>

</resources>
