<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.ivotek.poor2.ui.SensorsFragment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:textSize="28sp"
                android:text="@string/sensor_ultrasound_left"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/ultrasound_left"
                style="?android:attr/textAppearanceLarge"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:textSize="28sp"
                android:text="@string/sensor_ultrasound_center"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/ultrasound_center"
                style="?android:attr/textAppearanceLarge"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:textSize="28sp"
                android:text="@string/sensor_ultrasound_right"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/ultrasound_right"
                style="?android:attr/textAppearanceLarge"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:textSize="28sp"
                android:text="@string/sensor_compass"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/compass"
                style="?android:attr/textAppearanceLarge"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:textSize="28sp"
                android:text="@string/sensor_accelerationX"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/accelerationX"
                style="?android:attr/textAppearanceLarge"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:textSize="28sp"
                android:text="@string/sensor_accelerationY"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/accelerationY"
                style="?android:attr/textAppearanceLarge"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:textSize="28sp"
                android:text="@string/sensor_accelerationZ"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/accelerationZ"
                style="?android:attr/textAppearanceLarge"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:textSize="28sp"
                android:text="@string/sensor_tiltX"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/tiltX"
                style="?android:attr/textAppearanceLarge"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:textSize="28sp"
                android:text="@string/sensor_tiltY"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/tiltY"
                style="?android:attr/textAppearanceLarge"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:textSize="28sp"
                android:text="@string/sensor_tiltZ"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/tiltZ"
                style="?android:attr/textAppearanceLarge"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:textSize="28sp"
                android:text="@string/sensor_humidity"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/humidity"
                style="?android:attr/textAppearanceLarge"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:textSize="28sp"
                android:text="@string/sensor_temperature"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/temperature"
                style="?android:attr/textAppearanceLarge"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:textSize="28sp"
                android:text="@string/sensor_powerIn"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/powerIn"
                style="?android:attr/textAppearanceLarge"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:textSize="28sp"
                android:text="@string/sensor_optical_left"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/optical_left"
                style="?android:attr/textAppearanceLarge"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:textSize="28sp"
                android:text="@string/sensor_optical_center_left"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/optical_center_left"
                style="?android:attr/textAppearanceLarge"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:textSize="28sp"
                android:text="@string/sensor_optical_center_right"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/optical_center_right"
                style="?android:attr/textAppearanceLarge"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:textSize="28sp"
                android:text="@string/sensor_optical_right"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/optical_right"
                style="?android:attr/textAppearanceLarge"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:textSize="28sp"
                android:text="@string/sensor_photoresistor_left"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/photoresistor_left"
                style="?android:attr/textAppearanceLarge"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:textSize="28sp"
                android:text="@string/sensor_photoresistor_center"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/photoresistor_center"
                style="?android:attr/textAppearanceLarge"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:textSize="28sp"
                android:text="@string/sensor_photoresistor_right"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/photoresistor_right"
                style="?android:attr/textAppearanceLarge"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

        </LinearLayout>

</ScrollView>
